--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Marc-Antoine",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/rest": "^1.4.0",
+    "@discordjs/builders": "^1.4.0",
+    "@discordjs/rest": "^1.5.0",
+    "@discordjs/voice": "^0.14.0",
+    "discord-player": "^5.2.2",
     "chalk": "^4.1.2",
     "discord-api-types": "^0.37.22",
     "discord.js": "^14.7.1",
