--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^1.4.0",
+    "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^1.5.0",
     "@discordjs/voice": "^0.14.0",
-    "discord-player": "^5.2.2",
     "chalk": "^4.1.2",
     "discord-api-types": "^0.37.22",
+    "discord-player": "^5.2.2",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3"
+    "distube": "^4.0.4",
+    "dotenv": "^16.0.3",
+    "sodium": "^3.0.2"
   }
 }
