--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "discord-api-types": "^0.37.22",
     "discord-player": "^5.2.2",
     "discord.js": "^14.7.1",
+    "@distube/soundcloud": "^1.2.1",
+    "@distube/spotify": "^1.3.2",
+    "@distube/yt-dlp": "^1.1.3",
     "distube": "^4.0.4",
     "dotenv": "^16.0.3",
-    "sodium": "^3.0.2"
+    "sodium": "^3.0.2",
+    "libsodium-wrappers": "^0.7.10"
   }
 }
